sample/msvc/error/c2516.cpp
// C2516.cpp
typedef unsigned long ulong;
class C : public ulong {}; // C2516
